--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "fabric": "^5.3.0",
-    "pdfjs-dist": "^4.0.269"
+    "pdfjs-dist": "3.11.174"
   },
   "devDependencies": {
     "vite": "^5.0.0"
